correctly switch back to JTAGC after password check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,38 +14,37 @@ set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(dirtyJtag C CXX ASM)
+project(pJTAG C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(dirtyJtag
-		dirtyJtag.c
+add_executable(pJTAG
+		pJTAG.c
 		pio_jtag.c
-		cmd.c
 )
 
-target_include_directories(dirtyJtag PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(pJTAG PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-pico_generate_pio_header(dirtyJtag ${CMAKE_CURRENT_LIST_DIR}/jtag.pio)
+pico_generate_pio_header(pJTAG ${CMAKE_CURRENT_LIST_DIR}/jtag.pio)
 
-pico_set_program_name(dirtyJtag "dirtyJtag")
-pico_set_program_version(dirtyJtag "0.1")
+pico_set_program_name(pJTAG "pJTAG")
+pico_set_program_version(pJTAG "0.1")
 
-pico_enable_stdio_uart(dirtyJtag 0)
-pico_enable_stdio_usb(dirtyJtag 1)
+pico_enable_stdio_uart(pJTAG 0)
+pico_enable_stdio_usb(pJTAG 1)
 
 # Add the standard library to the build
-target_link_libraries(dirtyJtag PRIVATE pico_stdlib)
+target_link_libraries(pJTAG PRIVATE pico_stdlib)
 
 # Add any user requested libraries
-target_link_libraries(dirtyJtag PRIVATE
+target_link_libraries(pJTAG PRIVATE
     hardware_pio
 	hardware_dma
 	pico_unique_id
 )
 
-pico_add_extra_outputs(dirtyJtag)
+pico_add_extra_outputs(pJTAG)
 
